<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdjustComparisonSettingsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adjust Comparison Weights"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annual Salary Weight"
            />
        <EditText
            android:id="@+id/annualSalaryWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annual Bonus Weight"
            />
        <EditText
            android:id="@+id/annualBonusWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telework Weight"
            />
        <EditText
            android:id="@+id/teleworkWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leave Time Weight"
            />
        <EditText
            android:id="@+id/leaveTimeWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gym Allowance Weight"
            />
        <EditText
            android:id="@+id/gymAllowanceWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/saveAdjustComparisonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:onClick="saveComparisonSettings"
            android:text="Save" />

        <Button
            android:id="@+id/cancelAdjustComparisonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="cancelComparisonSettings"
            android:text="Cancel" />
    </RelativeLayout>

</LinearLayout>